--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           go-version: "1.25.6"
           cache: true
-      - run: go test ./...
+      - run: go test -v ./...
