--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
           go-version: "1.25.x"
           check-latest: true
           cache: true
-      - run: go test -v ./...
+      - run: go env && go test -v ./...
